# music-creation-engine

./: .gitignore  CHANGELOG.md  Dockerfile  README.en.md  README.md  SKILL.md  architecture-report.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
adapters/codex/: AGENTS.md
adapters/hermes/: SKILL.md
adapters/openclaw/: README.md
config/: defaults.yaml
docs/superpowers/plans/: 2026-07-07-deployable-music-creation-engine.md
docs/superpowers/specs/: 2026-07-07-deployable-music-creation-engine-design.md
examples/: codex-workflow.md  hermes-workflow.md  openclaw-workflow.md
music_creation_engine/: __init__.py
references/: architecture-report.md  continuous-development.md  current-state.md  deployment-notes.md  evaluation-criteria.md  install-guide.md  integration-matrix.md  music21-api-notes.md  project-status.md  release-notes-v0.4.0.md  sync-audit-2026-07-07.md
scripts/: demo_renderer.py  sheet_music_generator.py
src/music_creation_engine/: __init__.py  capabilities.py  cli.py  config.py  models.py  security.py
src/music_creation_engine/adapters/: install.py
src/music_creation_engine/api/: app.py
src/music_creation_engine/integrations/: base.py  memory.py  meting.py  reaper.py  research.py  (+1 more)
tests/: audit_hermes_readiness.py  e2e_http_workflow.py  install_paths.sh  test_adapter_install.py  test_api.py  test_artifact_service.py  test_capabilities.py  test_cli.py  test_config.py  test_end_to_end_layout.py  test_integrations.py  test_real_integration.py  test_scripts.py  test_services.py
(+11 files in other folders)
