[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-creation-engine"
version = "0.2.0"
description = "Deployable music creation engine with CLI, HTTP API, and agent adapters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.137",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
music = [
  "music21>=9.0",
]
dev = [
  "pytest>=9.0",
]

[project.scripts]
music-creation-engine = "music_creation_engine.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
